[package]
name = "dungeon"
version = "0.1.0"
authors = ["michael.mileusnich@yello.co <michael.mileusnich@yello.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
glam = "0.11.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
ggez = { git = "https://github.com/ggez/ggez.git", branch = "devel" }
