[package]
name = "dungeon"
version = "0.1.0"
authors = ["michael.mileusnich@yello.co <michael.mileusnich@yello.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
glam = { version = "0.12", features = ["mint"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
clap = "3.0.0-beta.2"
ggez = "0.6.0-rc0"
serde = "1.0.120"
serde_json = "1.0.0"
